prevent code blocks from having scrollbars because of horizontal margins
git-svn-id: http://www.xpra.org/svn/Xpra@16950 3bb7dfac-3a0b-4e04-842a-767bc560f471

--- a/web/main.css
+++ b/web/main.css
@@ -439,6 +439,10 @@ div#modify fieldset {
         clear: both;
 }
 
+pre.wiki, pre.literal-block {
+        margin: 0.25em 0em;
+}
+
 tt {
 	color: #5E2612;
 	border: 1px solid #953;
